<resources>
    <string name="clear_data">Clear Data</string>
    <string name="app_name">RTIRPC</string>
    <string name="app_title">Road Traffic Injury Research and Prevention Center</string>
    <string name="app_sub_title">Department of Neurosurgrey, Jinnah Postgrudate Medical Center\n
Karachi 75510, Pakistan. Phone: 0092 99207377 \n
Email: info@roadsafety.pk, rtirpc@gmail.com</string>
    <string name="header_text">Road Traffic Injury Research and Prevention Center</string>
    <string-array name="hospital_array">
        <item>Agha Khan - AKUH</item>
        <item>Jinnah PostGraduate - JPMC</item>
        <item>Abbasi Shaheed - ASH</item>
        <item>Civil Hospital</item>
        <item>Liaquat National Hospital</item>

    </string-array>
    <string-array name="ambulance_array">
        <item>Ambulane</item>
        <item>Private</item>
        <item>Public</item>
        <item>Police</item>
    </string-array>
    <string-array name="history_array">
        <item>Patient</item>
        <item>Attendant</item>
        <item>Public</item>
        <item>Police</item>
    </string-array>
    <string-array name="travelling_array">
        <item>Work</item>
        <item>Leisure</item>
        <item>Study</item>
        <item>Other</item>
    </string-array>
    <string-array name="vehicles_array">
        <item>Car</item>
        <item>Truck</item>
        <item>Bike</item>
        <item>Taxi</item>
    </string-array>
    <string-array name="date_range">
        <item>Last 7 days</item>
        <item>Last 30 days</item>
        <item>Last 180 days</item>
        <item>Last 365 days</item>
        <item>Lifetime</item>
        <item>Custom</item>
    </string-array>
    <string-array name="patient_ride_array">
        <item>Rider (of 2 wheeler)</item>
        <item>Pillion Passenger</item>
        <item>Driver (of 4 wheeler)</item>
        <item>Passenger</item>
        <item>Pedestrian</item>
        <item>Driver (of 3 wheeler)</item>
        <item>Driver (more than 4 wheeler)</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="helmet_array">
        <item>Wearing Helmet</item>
        <item>Not Wearing Helmet</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="collision_array">
        <item>Head-on</item>
        <item>Rear-end</item>
        <item>Hit Object</item>
        <item>Merging</item>
        <item>Side Swipe</item>
        <item>Right Angle</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="loc_detail_array">
        <item>Intersection</item>
        <item>Mid Block</item>
        <item>U-Turn</item>
        <item>Flyover</item>
        <item>Bridges</item>
        <item>Underpass</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="iss_array">
        <item>Minor</item>
        <item>Moderate</item>
        <item>Serious</item>
        <item>Severe</item>
        <item>Critical</item>
        <item>Maximum</item>
    </string-array>
    <string-array name="accident_array">
        <item>Road Crossing</item>
        <item>Over Taking</item>
        <item>Over Speeding</item>
        <item>Lane Jumping</item>
    </string-array>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="about_app">This app is designed to submit accident data.\n
        It performs analysis on submitted data and generates results.\n\n

    <i>Department of Neurosurgrey, Jinnah Postgraduate Medical Center Karachi, Pakistan.\n
        Phone: 0092 99207377 \n
Email: info@roadsafety.pk, rtirpc@gmail.com</i></string>
    <string name="title_activity_stats">Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="stats1_txt1">Accidents in a Month</string>
    <string name="stats1_txt2">The number of accidents that take place in a month.</string>
    <string name="stats2_txt1">Accidents at a Location</string>
    <string name="stats2_txt2">The number of accidents that take place at a location.</string>
    <string name="stats3_txt1">Accidents by a Vehicle</string>
    <string name="stats3_txt2">The number of accidents that take place by a vehicle.</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="role1_title">RTIRPC Reporting</string>
    <string name="role2_title">Self Reporting</string>
    <string name="role3_title">RTIRPC Statistics</string>
    <string name="role1_desc">Submit accident reports</string>
    <string name="role2_desc">Submit on site accident reports</string>
    <string name="role3_desc">View stats of submitted reports</string>
    <string name="title_activity_maps">Map</string>
    <string name="photos_line"><b>Accident Scene Photos</b>\n
                                Please take atleast 3 photographs\n
                                All photos submitted have to be taken using\n
                                RTIRPC reporting app.</string>
    <string name="term1">This app is only available for Hospital Management and Citizens
                            to do accident reporting.</string>
    <string name="term2"><b>Please <u>do not use</u> this app to do accident reporting if:</b>\n\n
 &#160;1. You have left the accident scene.\n
 &#160;2. You are not the driver at the point of the accident.\n
 &#160;3. There are injuries involved.\n
 &#160;4. The accident involves government vehicle or property,foreign vehicle, pedestrian/cyclist, hit-and-run, vandalism, and fire.
 </string>
    <string name="term3">For such situations, please proceed to RTIRPC to complete the accident reporting within the next working day.\n\nDo note that for (3) and (4), you have to make a police report before you proceed to report the accident.</string>
    <string name="alert_title_export">Exporting Data</string>
    <string name="alert_subtxt_export">Are you sure you want to export data?</string>
    <string name="export_txt">Select data to export</string>
    <string name="file1">Only Report Data</string>
    <string name="file2">Only Accident Data</string>
    <string name="file3">Only Patient General Data</string>
    <string name="file4">Only Patient Health Data</string>
    <string name="file">All Data</string>
    <string name="file1_name">ReportData</string>
    <string name="file2_name">AccidentData</string>
    <string name="file3_name">PatientGeneralData</string>
    <string name="file4_name">PatientHealthData</string>
    <string name="share_txt2">Share the data or upload it to the cloud.</string>
    <string name="share_txt">Select data to share</string>
    <string name="export_txt2">Open the exported file in Excel.</string>
    <string name="del_title">Clear Data</string>
    <string name="del_subtxt">Clear data from all files.\nMake sure you have back up the data.</string>
    <string name="alert_msg">Are you sure you want to clear all data?</string>
    <string name="space_txt">Space occupied</string>
    <string name="db_txt">Total database size</string>
    <string name="db_txt2">Average used (%)</string>
    <string name="db_txt3">Free</string>
    <string name="notify_sms"><b>Accident Reporting</b>\n\nAn accident take place at </string>
    <string name="notfiy_subtxt">\n\nReported by Road Traffic Injury Research and Prevention Center.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="live_stream">Live Stream</string>
    <string name="title_splash">Smart Home</string>
    <string name="desc_splash">Security and Privacy in IOT</string>
    <string name="pi_server">PI-Server</string>
    <string name="control_system_title">Control System</string>
    <string name="temperature_title">Temperature</string>
    <string name="pi_server_title">Pi-Server</string>
    <string name="local_cs_port">Control System Port(Local)</string>
    <string name="global_cs_port">Control System Port(Global)</string>
    <string name="local_lv_port">Live Stream Port(Local)</string>
    <string name="global_lv_port">Live Stream Port(Global)</string>
    <string name="local_ip">Local IP</string>
    <string name="global_ip">Global IP</string>
    <string name="local_cs_port_key">Control System Port(Local)</string>
    <string name="global_cs_port_key">Control System Port(Global)</string>
    <string name="local_lv_port_key">Live Stream Port(Local)</string>
    <string name="global_lv_port_key">Live Stream Port(Global)</string>
    <string name="run_by_locality">Select your notification mode</string>
    <string name="mode_default">WhatsApp/Email</string>
    <string name="mode_key">mode</string>
    <string name="run_by_locality_local_label">SMS</string>
    <string name="run_by_locality_local_value" translatable="false">SMS</string>
    <string name="run_by_locality_global_label">WhatsApp/Email</string>
    <string name="run_by_locality_global_value" translatable="false">WhatsApp/Email</string>
    <string-array name="run_by_locality_labels">
        <item>@string/run_by_locality_local_label</item>
        <item>@string/run_by_locality_global_label</item>
    </string-array>
    <string-array name="run_by_locality_values">
        <item>@string/run_by_locality_local_value</item>
        <item>@string/run_by_locality_global_value</item>
    </string-array>
    <string name="change_number">Change notifier number</string>
    <string name="change_email">Change notifier email address</string>
    <string name="live_stream_port">Change Live Stream Port</string>
    <string name="default_number">03409991000</string>
    <string name="default_email">yumnaasim11@gmail.com</string>
    <string name="default_lv_port">8080</string>
    <string name="default_chanelID">171371</string>
    <string name="chanel_key">channel_ID</string>
    <string name="change_channel_ID">Change Channel Id</string>
    <string name="label_reports">History</string>
    <string name="txt">No data found\n
                        You\'ve not inserted any data yet.</string>
    <string name="main_heading2">Patient Details</string>
    <string name="main_heading1">Accident Details</string>
    <string name="main_heading3">Patient Health Details</string>
    <string name="heading1">Time Arrival:</string>
    <string name="heading2">Time Accident:</string>
    <string name="heading3">Ambulance Name: </string>
    <string name="heading4">Vehicle (arrived): </string>
    <string name="heading5">Ambulance Name: </string>
    <string name="heading6">History provider: </string>
    <string name="heading7">Travelling Reason: </string>
    <string name="heading8">Vehicle involvement 1:  </string>
    <string name="heading9">Vehicle involvement 2:  </string>
    <string name="heading10">Collision Type:  </string>
    <string name="heading11">Location:  </string>
    <string name="heading12">Location Details:  </string>
    <string name="heading13">Location Description:</string>
    <string name="heading14">Name:</string>
    <string name="heading15">Age:</string>
    <string name="heading16">Occupation:</string>
    <string name="heading17">Mobile:</string>
    <string name="heading18">Address:</string>
    <string name="heading19">Gender:</string>
    <string name="heading20">Respirator Rate:</string>
    <string name="heading21">Blood Pressure:</string>
    <string name="heading22">GCS:</string>
    <string name="heading23">Eye Response 1:</string>
    <string name="heading24">Eye Response 2:</string>
    <string name="heading25">Head ISS:</string>
    <string name="heading26">Chest ISS:</string>
    <string name="heading27">Extermity ISS:</string>
    <string name="heading28">Face ISS:</string>
    <string name="heading29">Abdomen ISS:</string>
    <string name="heading30">External ISS:</string>
    <string name="heading31">Doctor Notes:</string>
</resources>